work on various components

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: plato.cap
 description: Summative and Formative review for CAP, written in AngularDart.
-version: 0.3.1+1
+version: 0.3.2
 
 author: Joseph B. Axenroth
 
