--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,20 +1,20 @@
 name: plato.cap
 description: Summative and Formative review for CAP, written in AngularDart.
-version: 0.4.1
+version: 0.4.2
 
 author: Joseph B. Axenroth
 
 environment:
-  sdk: '>=2.8.1 <3.0.0'
+  sdk: '>=2.10.3 <3.0.0'
 
 dependencies:
-  angular: ^6.0.0-alpha+1
-  angular_components: ^0.14.0-alpha+1
+  angular: ^6.0.1
+  angular_components: ^1.0.2
 
 dev_dependencies:
-  angular_test: ^2.4.0
-  build_runner: ^1.7.1
-  build_test: ^0.10.9+1
-  build_web_compilers: ^2.7.0
+  angular_test: ^3.0.0
+  build_runner: ^1.10.4
+  build_test: ^1.3.0
+  build_web_compilers: ^2.12.2
   sass_builder: ^2.1.3
-  test: ^1.9.3
+  test: ^1.15.4
