more work on various components and services; minor refactoring for better code consistency

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -12,6 +12,7 @@ include: package:pedantic/analysis_options.yaml
 analyzer:
   exclude: [build/**]
   errors:
+    library_prefixes: ignore
     uri_has_not_been_generated: ignore
   plugins:
     - angular
