--- a/build.yaml
+++ b/build.yaml
@@ -9,5 +9,5 @@ targets:
           compiler: dart2js
           dart2js_args:
             - --fast-startup
-            - --minify
+            #- --minify
             - --omit-implicit-checks
