--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: plato.cap
 description: Summative and Formative review for CAP, written in AngularDart.
-version: 0.5.0+1
+version: 0.5.1
 
 author: Joseph B. Axenroth
 
